--- a/project/css/style.css
+++ b/project/css/style.css
@@ -265,5 +265,10 @@ th, td {
     grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
     grid-column-gap: 10px;
 
+}
 
+/* footer */
+
+.help{
+    margin-top: 30px;
 }
