--- a/project/css/style.css
+++ b/project/css/style.css
@@ -16,8 +16,8 @@ main{
 }
 
 header {
-    margin: 0  30px 0 0;
-    padding-right: 20px;
+    margin: 0 30px 0 0;
+    /* padding-right: 10px; */
     height: 50px;
     background-size: 100% 100%;
     width: 1000px;
@@ -51,6 +51,9 @@ nav {
     width: 1500px;
 }
 
+a {
+    text-decoration: none !important;
+  }
 
 
 
@@ -225,6 +228,11 @@ section{
     display: inline;
 }
 
+.jop-more{
+    display: flex;
+    justify-content: space-between;
+}
+
 /* 여기까지 메인 */
 
 th, td {
@@ -274,10 +282,12 @@ th, td {
     grid-template-columns: 1fr 1fr;
     height: 200px;
 }
-/* .location{
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
-} */
+
+ a {
+    padding: 5px 5px; /* 클릭 영역 확대 */
+    margin-right: 5px; /* 오른쪽 여백 설정 */
+} 
+
 
 
 /* footer */
