--- a/project/css/style.css
+++ b/project/css/style.css
@@ -295,3 +295,21 @@ th, td {
 .help{
     margin-top: 30px;
 }
+
+
+.tf-search{
+            
+    height: 40px;
+    width: 300px;
+    font-size: 20px;
+    border-radius: 4px;
+    padding: 0 0 0 30px;
+}
+.box-tf{
+    position: relative;
+}
+.icon-search{
+    position: absolute;
+    top: 10px;
+    left: 270px;
+}
