--- a/project/css/style.css
+++ b/project/css/style.css
@@ -124,7 +124,7 @@ section {
 }
 
 .img1 {
-    background-image: url(../images/home1.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 250px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -132,7 +132,7 @@ section {
 }
 
 .img2 {
-    background-image: url(../images/home1.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 250px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -140,7 +140,7 @@ section {
 }
 
 .img3 {
-    background-image: url(../images/home1.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 250px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -156,7 +156,7 @@ section {
 }
 
 .company-img1 {
-    background-image: url(../images/home1.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -164,7 +164,7 @@ section {
 }
 
 .company-img2 {
-    background-image: url(../images/home2.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -172,7 +172,7 @@ section {
 }
 
 .company-img3 {
-    background-image: url(../images/home3.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -180,7 +180,7 @@ section {
 }
 
 .company-img4 {
-    background-image: url(../images/home4.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -188,7 +188,7 @@ section {
 }
 
 .company-img5 {
-    background-image: url(../images/home5.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -196,7 +196,7 @@ section {
 }
 
 .company-img6 {
-    background-image: url(../images/home6.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -204,7 +204,7 @@ section {
 }
 
 .company-img7 {
-    background-image: url(../images/home7.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
@@ -212,7 +212,7 @@ section {
 }
 
 .company-img8 {
-    background-image: url(../images/home8.jpg);
+    background-image: url(../images/chaeyong.jpg);
     height: 180px;
     background-size: 100% 100%;
     border-radius: 20px;
