--- a/project/css/style.css
+++ b/project/css/style.css
@@ -11,12 +11,20 @@
      */
 }
 
-main {
+/* 공통 start */
+a {
+    text-decoration: none !important;
+}
+
+/* 공통 end */
+
+/* 헤더 start */
+.main-size {
     width: 1000px;
     margin: 0px auto;
 }
 
-header {
+.header-main {
     margin: 0 30px 0 0;
     /* padding-right: 10px; */
     height: 50px;
@@ -24,13 +32,13 @@ header {
     width: 1000px;
 }
 
-nav {
+.nav-header {
     padding: 20px;
     display: flex;
     justify-content: space-between;
 }
 
-.menu-left {
+.div-menu-left {
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-column-gap: 10px;
@@ -40,7 +48,7 @@ nav {
 
 }
 
-.menu-right {
+.div-menu-right {
     display: grid;
     grid-template-columns: auto auto auto auto;
     grid-column-gap: 10px;
@@ -50,9 +58,7 @@ nav {
 }
 
 
-a {
-    text-decoration: none !important;
-}
+
 
 
 
