--- a/project/css/style.css
+++ b/project/css/style.css
@@ -72,13 +72,15 @@ a {
     height: 100%;
 }
 
+.div-ad-img1 {
+    background-image: url(../images/ad1.png);
+    height: 150px;
+    border-radius: 20px;
+    background-size: 100% 100%;
+}
 
-/* 광고 end */
 
-
-/* 바디 start */
-
-
+/* 광고창 end */
 
 
 /* table {
@@ -121,12 +123,6 @@ table input {
 
 }
 
-.ad-img1 {
-    background-image: url(../images/ad1.png);
-    height: 150px;
-    border-radius: 20px;
-    background-size: 100% 100%;
-}
 
 section {
     margin: 30px 0;
@@ -329,7 +325,6 @@ a {
 
 /* footer */
 
-.div-footer {}
 
 .footer-top {
     /* margin-bottom: 30px; */
